Python for DS: Pandas task - improve solution for task 4 (use .assign)

--- a/1 Numpy and Pandas/2 Pandas Calculations.ipynb
+++ b/1 Numpy and Pandas/2 Pandas Calculations.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -507,21 +507,17 @@
        "Чехов              450        500  475.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prices = authors_books.loc[:, [\"price\"]]\n",
-    "authors_price = authors_books.loc[:, [\"author_name\"]]\n",
-    "# Не разобралась, как можно добавить сразу несколько столбцов с одинаковыми данными\n",
-    "authors_price[\"min_price\"] = prices\n",
-    "authors_price[\"max_price\"] = prices\n",
-    "authors_price[\"mean_price\"] = prices\n",
+    "authors_price = authors_books.loc[:, [\"author_name\"]].assign(min_price = prices, max_price = prices, mean_price = prices)\n",
     "\n",
     "authors_grouped = authors_price.groupby(\"author_name\")\n",
-    "authors_grouped.agg({\"min_price\": \"min\", \"max_price\": \"max\", \"mean_price\": \"mean\"})\n"
+    "authors_grouped.agg({\"min_price\": \"min\", \"max_price\": \"max\", \"mean_price\": \"mean\"})"
    ]
   },
   {
